--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -90,7 +90,7 @@
                 text-align: center;
             }
 
-            .menu-toggle {
+            .menu-trigger {
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
@@ -163,10 +163,13 @@
         padding: 15px;
         border-radius: 4px;
         overflow: hidden;
+        visibility: hidden;
+        height: 0;
     }
 
     &__logo{
         max-width: 184px;
+        transform-origin: top left;
     }
 
     &-close {
@@ -292,6 +295,7 @@
         width: 100%;
         height: 100%;
         backdrop-filter: blur(10px);
+        visibility: hidden;
     }
 
 }
