--- a/assets/scss/pages/_main.scss
+++ b/assets/scss/pages/_main.scss
@@ -31,8 +31,11 @@
 
 /* Hero */
 .hero {
+    width: 100%;
     height: 100svh;
     color: $color-white;
+    position: relative;
+    z-index: 2;
 
     &__contents {
         position: relative;
@@ -99,6 +102,9 @@
 /* About */
 .about {
     position: relative;
+    z-index: 1;
+    margin-top: -99.9vh;
+    margin-bottom: -100vh;
 
     &__inner{
         position: relative;
@@ -183,8 +189,12 @@
 
 /* Viewfinder */
 .viewfinder {
+    position: relative;
+    z-index: 2;
     padding:var(--grid-spacing) 0 20vw;
     @include bgDust;
+    //clip-path: inset(0% 6.25rem round 10px);
+    clip-path: inset(10% round 20px);
 
     &__top {
         margin-bottom: 45px;
@@ -245,6 +255,10 @@
             text-transform: capitalize;
 
             span {
+                display: block;
+            }
+
+            span:last-child {
                 color: $color-primary;
                 position: relative;
                 display: inline-block;
@@ -326,6 +340,11 @@
     top: 0;
     height: 100vh;
     background-color: $color-black;
+    @include bgDust;
+
+    &__canvas{
+        clip-path: inset(10% round 20px);
+    }
 }
 
 /* Camp */
@@ -367,6 +386,10 @@
             > span {
                 display: block;
                 overflow: hidden;
+
+                span {
+                    display: inline-block;
+                }
             }
     
             > span:nth-child(1) {
