--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -30,7 +30,7 @@ html, body {
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 ol, ul {
 	list-style: none;
