--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,6 +8,8 @@
 @import "./base/common";
 @import "./base/animations";
 
+@import "./components/buttons";
+
 @import "./layout/header";
 @import "./layout/footer";
 
