--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,9 @@ time, mark, audio, video {
   border: 0;
   font-size: 100%;
   vertical-align: baseline;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -66,12 +69,6 @@ html, body {
   max-width: 100%;
   width: 100%;
   height: 100%;
-}
-
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
 }
 
 ol, ul {
@@ -205,6 +202,7 @@ h1, h2 {
 }
 /* Button */
 .box-button {
+  position: relative;
   display: inline-block;
   font-size: 0.875rem;
   padding: 12px 22px;
@@ -213,7 +211,8 @@ h1, h2 {
   text-transform: uppercase;
   max-width: fit-content;
   font-family: "Scout-ibm-plex-mono", sans-serif;
-  transition: all 0.5s;
+  transition-property: background-color, border, color;
+  transition-duration: 0.5s;
 }
 .box-button--white {
   background-color: rgba(255, 255, 255, 0.1);
@@ -588,6 +587,10 @@ h1, h2 {
 }
 
 /* Footer */
+.footer {
+  position: relative;
+  z-index: 1;
+}
 .footer__row--top {
   position: relative;
   padding: 56px 16px 16px;
@@ -717,8 +720,6 @@ h1, h2 {
   object-fit: cover;
 }
 .footer__row--btm {
-  position: relative;
-  z-index: 1;
   display: grid;
   align-content: stretch;
   background-color: #FF5432;
@@ -761,11 +762,9 @@ h1, h2 {
 .container {
   position: relative;
   z-index: 2;
-}
-
-.sec {
   background-color: #fff;
 }
+
 .sec__wrap {
   position: relative;
   width: 100%;
@@ -791,7 +790,8 @@ h1, h2 {
   height: 100svh;
   color: #fff;
   position: relative;
-  z-index: 2;
+  z-index: 3;
+  background-color: #fff;
 }
 .hero__contents {
   position: relative;
@@ -860,6 +860,7 @@ h1, h2 {
   z-index: 1;
   margin-top: -99.9vh;
   margin-bottom: -100vh;
+  height: 100%;
 }
 .about__inner {
   position: relative;
@@ -1065,11 +1066,13 @@ h1, h2 {
 /* Camp */
 .camp {
   position: relative;
+  z-index: 2;
   padding-top: 160px;
   background: #2c3262;
   background: linear-gradient(to top, #b58c78, #2c3262 60%);
   color: #fff;
   overflow: hidden;
+  margin-top: -100vh;
 }
 .camp:before {
   content: "";
