--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -1,5 +1,6 @@
 /* Button */
 .box-button{
+    position: relative;
     display: inline-block;
     font-size: 0.875rem;
     padding:12px 22px;
@@ -8,7 +9,8 @@
     text-transform: uppercase;
     max-width: fit-content;
     font-family: $font-mono;
-    transition: all .5s;
+    transition-property: background-color, border, color;
+    transition-duration: .5s;
 
     &--white {
         background-color: rgba(255,255,255,0.1);
