--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -26,11 +26,11 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 html, body {
-    max-width: 100%;
+	max-width: 100%;
 	width:100%;
 	height:100%;
 }
-ol, ul {
+ol, ul, li {
 	list-style: none;
 }
 blockquote, q {
