Test: Canvas Safari 주소창 여백 이슈

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1076,7 +1076,7 @@ body {
   transform: translateX(-50%);
 }
 .about__contents .about__text-box {
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1143,7 +1143,7 @@ body {
 .about__canvas-wrap {
   position: relative;
   z-index: 1;
-  height: 100vh;
+  height: 100dvh;
   background-color: #010101;
 }
 
@@ -1309,7 +1309,7 @@ body {
 .scene {
   position: relative;
   z-index: 1;
-  height: 100vh;
+  height: 100dvh;
   background-color: #010101;
   background: url(../images/dust.png) #ede9e8;
   background-size: 200px;
