--- a/assets/scss/pages/_main.scss
+++ b/assets/scss/pages/_main.scss
@@ -5,6 +5,10 @@
     background-color: $color-white;
 }
 
+::-webkit-scrollbar{
+    display: none;
+}
+
 .sec {
     &__wrap{
         position: relative;
@@ -145,7 +149,8 @@
             justify-content: center;
             gap: 25px;
             opacity: 0;
-            visibility: hidden;
+            pointer-events: none;
+            // visibility: hidden;
 
             @include tablet {
                 justify-content: flex-end;
@@ -713,6 +718,7 @@
         grid-template-columns: repeat(2, minmax(0, 1fr));
         gap: .25rem;
         padding: var(--grid-spacing) 16px;
+        align-items: flex-start;
 
         @include mobile {
             grid-template-columns: 1fr;
@@ -722,7 +728,6 @@
     &__item {
         position: relative;
         border-radius: 4px;
-        overflow: hidden;
         width: 100%;
         color: $color-white;
 
@@ -772,13 +777,6 @@
                     }
                 }
             }
-
-        // .product__item-button{
-        //     position: absolute;
-        //     left:0;
-        //     bottom:0;
-        //     z-index: 2;
-        // }
         }
 
         &-bg {
@@ -789,6 +787,7 @@
             //width: 100%;
             height: 100%;
             overflow: hidden;
+            border-radius: 4px;
 
             img{
                 width: 100%;
