--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1162,8 +1162,16 @@ body {
 .about__canvas-wrap {
   position: relative;
   z-index: 1;
+  width: 100%;
   height: 100dvh;
   background-color: #010101;
+  overflow: hidden;
+}
+.about__canvas-wrap canvas {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /* Viewfinder */
@@ -1328,13 +1336,18 @@ body {
 .scene {
   position: relative;
   z-index: 1;
+  width: 100%;
   height: 100dvh;
-  background-color: #010101;
   background: url(../images/dust.png) #ede9e8;
   background-size: 200px;
+  overflow: hidden;
 }
 .scene__canvas {
   clip-path: inset(10% round 20px);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /* Camp */
