--- a/assets/scss/pages/_main.scss
+++ b/assets/scss/pages/_main.scss
@@ -221,8 +221,17 @@
     &__canvas-wrap{
         position: relative;
         z-index: 1;
+        width: 100%;
         height: 100dvh;
         background-color: $color-black;
+        overflow: hidden;
+
+        canvas {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
     }
 }
 
@@ -404,12 +413,17 @@
 .scene {
     position: relative;
     z-index: 1;
+    width:100%;
     height: 100dvh;
-    background-color: $color-black;
     @include bgDust;
+    overflow: hidden;
 
     &__canvas{
         clip-path: inset(10% round 20px);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 }
 
